@@ -10,6 +10,7 @@ S3method(append_chains,default)
 S3method(append_chains,mcmc)
 S3method(append_chains,mcmc.list)
 S3method(c,fmcmc_kernel)
+S3method(print,fmcmc_ith_step)
 S3method(print,fmcmc_kernel)
 S3method(print,fmcmc_kernel_list)
 S3method(print,fmcmc_last_mcmc)
