@@ -25,6 +25,10 @@ FMCMC 0.5-0
 -   The new function get_draws() returns the MCMC draws from the
     kernel’s proposal function (proposed states).
 
+-   The new function set_userdata(...) allows storing information into a
+    data.frame as the MCMC process runs. Users can retrieve the data
+    with the function get_userdata().
+
 -   The function append_chains() was randomly dropping one sample of the
     final set.
 
